Cleans up notebook.
Removes extra cells at end
Removes duplicate markdown cells
Moves markdown cell into correct location.

Deletes utility file.
imports shared utils to print success messages.

--- a/test/imagenator/imagenator_Regression.ipynb
+++ b/test/imagenator/imagenator_Regression.ipynb
@@ -37,6 +37,8 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "sys.path.append('../shared_utils')\n",
+    "from utilities import print_success\n",
     "from pathlib import Path\n",
     "from os.path import exists\n",
     "from datetime import datetime\n",
@@ -95,34 +97,6 @@
     "\n",
     "if harmony_environment is not None:\n",
     "    harmony_client = Client(env=harmony_environment)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fc7aef85",
-   "metadata": {},
-   "source": [
-    "# Begin regression tests:\n",
-    "\n",
-    "The IMAGENATOR is currently only configured against collections in the UAT environment.\n",
-    "\n",
-    "### Set up environment-dependent variables for imagenator L2:\n",
-    "\n",
-    "Define the collection and granule for testing in each environment."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5e79fd38-0854-4b70-b8f2-2c7a91b54445",
-   "metadata": {},
-   "source": [
-    "# Begin regression tests:\n",
-    "\n",
-    "The IMAGENATOR is currently only configured against collections in the UAT environment.\n",
-    "\n",
-    "### Set up environment-dependent variables for imagenator L2:\n",
-    "\n",
-    "Define the collection and granule for testing in each environment."
    ]
   },
   {
@@ -211,7 +185,7 @@
     "        assert output_files[0].read_bytes() == expected_png.read_bytes()\n",
     "        assert output_files[1].read_bytes() == expected_pgw.read_bytes()\n",
     "        assert output_files[2].read_bytes() == expected_aux.read_bytes()\n",
-    "\n",
+    "    print_success('imagenator L2 request on TEMPO NO2 vertical_column_stratosphere')\n",
     "else:\n",
     "    print('Skipping test: imagenator L2 not configured for environment')"
    ]
@@ -224,16 +198,6 @@
     "### Set up environment-dependent variables for imagenator L3:\n",
     "\n",
     "Define the collection and granule for testing in each environment."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4935bd7e-8e73-4c30-9787-727675c96136",
-   "metadata": {},
-   "source": [
-    "## Test: imagenator L3 request on TEMPO NO2 vertical_column_stratosphere variable\n",
-    "\n",
-    "Submit a single-granule request and validate output files."
    ]
   },
   {
@@ -259,6 +223,16 @@
     "    imagenator_info = imagenator_env[harmony_environment]\n",
     "else:\n",
     "    imagenator_info = None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4935bd7e-8e73-4c30-9787-727675c96136",
+   "metadata": {},
+   "source": [
+    "## Test: imagenator L3 request on TEMPO NO2 vertical_column_stratosphere variable\n",
+    "\n",
+    "Submit a single-granule request and validate output files."
    ]
   },
   {
@@ -298,18 +272,10 @@
     "        assert output_files[0].read_bytes() == expected_png.read_bytes()\n",
     "        assert output_files[1].read_bytes() == expected_pgw.read_bytes()\n",
     "        assert output_files[2].read_bytes() == expected_aux.read_bytes()\n",
-    "\n",
+    "    print_success('imagenator L3 request on TEMPO NO2 vertical_column_stratosphere')\n",
     "else:\n",
     "    print('Skipping test: imagenator L3 not configured for environment')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a490f11c-5e1d-4c92-aaaf-7f97c5cdb245",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
