TRT-700: Migrate to use earthdata-hashdiff.

--- a/test/hoss/HOSS_Regression.ipynb
+++ b/test/hoss/HOSS_Regression.ipynb
@@ -46,6 +46,7 @@
     "from datetime import datetime\n",
     "from os.path import exists\n",
     "\n",
+    "from earthdata_hashdiff import nc4_matches_reference_hash_file\n",
     "from harmony import BBox, Client, Collection, Dimension, Environment, Request\n",
     "\n",
     "from hoss_utilities import test_is_configured"
@@ -69,8 +70,7 @@
     "import sys\n",
     "\n",
     "sys.path.append('../shared_utils')\n",
-    "from utilities import print_success, submit_and_download\n",
-    "from compare import nc4_matches_reference_hash_file"
+    "from utilities import print_success, submit_and_download"
    ]
   },
   {
