--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -100,11 +100,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from harmony import BBox, Client, Collection, Environment, Request\n",
     "from os.path import exists\n",
     "from datetime import datetime\n",
     "from pathlib import Path\n",
-    "from tempfile import TemporaryDirectory"
+    "from tempfile import TemporaryDirectory\n",
+    "\n",
+    "from earthdata_hashdiff import h5_matches_reference_hash_file\n",
+    "from harmony import BBox, Client, Collection, Environment, Request"
    ]
   },
   {
@@ -125,8 +127,7 @@
     "import sys\n",
     "\n",
     "sys.path.append('../shared_utils')\n",
-    "from utilities import print_success, submit_and_download\n",
-    "from compare import h5_matches_reference_hash_file"
+    "from utilities import print_success, submit_and_download"
    ]
   },
   {
