--- a/test/regridder/Regridder_Regression.ipynb
+++ b/test/regridder/Regridder_Regression.ipynb
@@ -79,10 +79,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from harmony import Collection, Environment, Client, Request, BBox\n",
+    "from pathlib import Path\n",
     "from tempfile import TemporaryDirectory\n",
     "\n",
-    "from pathlib import Path"
+    "from earthdata_hashdiff import (\n",
+    "    h5_matches_reference_hash_file,\n",
+    "    nc4_matches_reference_hash_file,\n",
+    ")\n",
+    "from harmony import BBox, Client, Collection, Environment, Request"
    ]
   },
   {
@@ -103,8 +107,7 @@
     "import sys\n",
     "\n",
     "sys.path.append(\"../shared_utils\")\n",
-    "from utilities import print_success, submit_and_download\n",
-    "from compare import h5_matches_reference_hash_file, nc4_matches_reference_hash_file"
+    "from utilities import print_success, submit_and_download"
    ]
   },
   {
