--- a/test/smap-l2-gridder/smap-l2-gridder_Regression.ipynb
+++ b/test/smap-l2-gridder/smap-l2-gridder_Regression.ipynb
@@ -95,9 +95,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from harmony import Client, Collection, Environment, Request\n",
     "from pathlib import Path\n",
-    "from tempfile import TemporaryDirectory"
+    "from tempfile import TemporaryDirectory\n",
+    "\n",
+    "from earthdata_hashdiff import nc4_matches_reference_hash_file\n",
+    "from harmony import Client, Collection, Environment, Request"
    ]
   },
   {
@@ -118,8 +120,7 @@
     "import sys\n",
     "\n",
     "sys.path.append('../shared_utils')\n",
-    "from utilities import print_success, submit_and_download\n",
-    "from compare import nc4_matches_reference_hash_file"
+    "from utilities import print_success, submit_and_download"
    ]
   },
   {
