--- a/test/swath-projector/SwathProjector_Regression.ipynb
+++ b/test/swath-projector/SwathProjector_Regression.ipynb
@@ -53,10 +53,10 @@
     "from datetime import datetime\n",
     "from os.path import exists\n",
     "\n",
+    "from earthdata_hashdiff import nc4_matches_reference_hash_file\n",
     "from harmony import Client, Collection, Environment, Request\n",
     "\n",
     "sys.path.append('../shared_utils')\n",
-    "from compare import nc4_matches_reference_hash_file\n",
     "from utilities import print_success, submit_and_download"
    ]
   },
