TRT-696: Update SAMBAH test suite to use earthdata-hashdiff.

--- a/test/sambah/SAMBAH_Regression.ipynb
+++ b/test/sambah/SAMBAH_Regression.ipynb
@@ -47,23 +47,34 @@
    },
    "outputs": [],
    "source": [
+    "from datetime import datetime\n",
+    "from os.path import exists\n",
+    "from pathlib import Path\n",
+    "from tempfile import TemporaryDirectory\n",
+    "\n",
+    "from earthdata_hashdiff import nc4_matches_reference_hash_file\n",
+    "from harmony import BBox, Client, Collection, Environment, Request"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca4b9bb8-227c-4370-96a1-d87e16d3668b",
+   "metadata": {},
+   "source": [
+    "## Import shared utility functions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25f05477-a082-4104-9b6a-1b3678b36005",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import sys\n",
     "\n",
     "sys.path.append('../shared_utils')\n",
-    "from utilities import (\n",
-    "    print_success,\n",
-    "    submit_and_download,\n",
-    ")\n",
-    "\n",
-    "from datetime import datetime\n",
-    "from os.path import exists\n",
-    "\n",
-    "from harmony import BBox, Client, Collection, Environment, Request\n",
-    "\n",
-    "from local_utilities import (\n",
-    "    compare_results_to_reference_file,\n",
-    "    remove_results_files,\n",
-    ")"
+    "from utilities import print_success, submit_and_download"
    ]
   },
   {
@@ -153,6 +164,10 @@
     "        'G1269044612-LARC_CLOUD',  # TEMPO_NO2_L2_V03_20240801T155308Z_S008G01.nc\n",
     "        'G1269044756-LARC_CLOUD',  # TEMPO_NO2_L2_V03_20240801T155948Z_S008G02.nc\n",
     "    ],\n",
+    "    'full_subset_reference_file': 'reference_files/temp_var_bbox_uat.json',\n",
+    "    'variable_subset_reference_file': 'reference_files/var_only_uat.json',\n",
+    "    'spatial_subset_reference_file': 'reference_files/spatial_only_uat.json',\n",
+    "    'no_subset_reference_file': 'reference_files/all_data_uat.json',\n",
     "}\n",
     "\n",
     "sambah_prod_information = {\n",
@@ -166,6 +181,10 @@
     "        'G3181345515-LARC_CLOUD',  # TEMPO_NO2_L2_V03_20240801T155308Z_S008G01.nc\n",
     "        'G3181345531-LARC_CLOUD',  # TEMPO_NO2_L2_V03_20240801T155948Z_S008G02.nc\n",
     "    ],\n",
+    "    'full_subset_reference_file': 'reference_files/temp_var_bbox_prod.json',\n",
+    "    'variable_subset_reference_file': 'reference_files/var_only_prod.json',\n",
+    "    'spatial_subset_reference_file': 'reference_files/spatial_only_prod.json',\n",
+    "    'no_subset_reference_file': 'reference_files/all_data_prod.json',\n",
     "}\n",
     "\n",
     "sambah_request_env = {\n",
@@ -189,13 +208,12 @@
    "outputs": [],
    "source": [
     "request_info = {\n",
-    "    'collection': sambah_info[\"collection\"],\n",
+    "    **sambah_info,\n",
     "    'temporal': {\n",
     "        'start': datetime(2024, 8, 1, 15, 34, 0),\n",
     "        'stop': datetime(2024, 8, 1, 16, 0, 0),\n",
     "    },\n",
     "    'spatial': BBox(-170, 33, -10, 38),\n",
-    "    'granule_id': sambah_info[\"granule_id\"],\n",
     "    # chosen variables include one variable from each group\n",
     "    # support/scattering_weights is 3D variable\n",
     "    'variables': [\n",
@@ -211,16 +229,16 @@
    "id": "fc7aef85",
    "metadata": {},
    "source": [
-    "# Begin regression tests:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9dd58c71-0232-4a20-9dc4-ef6b3544e797",
-   "metadata": {},
-   "source": [
-    "SAMBAH is currently deployed to Sandbox, SIT, UAT and production.\n",
-    "Requests will be made against the TEMPO NO2 L2 V03 collection."
+    "# Begin regression tests:\n",
+    "\n",
+    "SAMBAH is currently deployed to Sandbox, SIT, UAT and production. Requests will be made against the TEMPO NO2 L2 V03 collection. Each request will:\n",
+    "\n",
+    "* Define a request to Harmony using  `harmony-py`.\n",
+    "* Execute that request.\n",
+    "* Download the output file within a temporary directory.\n",
+    "* Ensure that the expected output file is downloaded (i.e. that the request was successful).\n",
+    "* Convert the output to a JSON file that hashes the variables and groups in the output file.\n",
+    "* Compare that JSON file to a reference JSON file, that should be identical (except for the `history` and `history_json` attributes that contain timestamps)."
    ]
   },
   {
@@ -261,12 +279,16 @@
     "    )\n",
     "\n",
     "    request_name = 'SAMBAH temporal, variable, bounding box request'\n",
-    "    output_filename = 'temp_var_bbox.nc4'\n",
     "\n",
-    "    submit_and_download(harmony_client, temp_var_bbox_request, output_filename)\n",
-    "    assert exists(output_filename), f'Unsuccessful {request_name}.'\n",
+    "    with TemporaryDirectory() as tmp_dir:\n",
+    "        full_output_path = tmp_dir / Path('temp_var_bbox.nc4')\n",
+    "        submit_and_download(harmony_client, temp_var_bbox_request, full_output_path)\n",
+    "        assert exists(full_output_path), f'Unsuccessful {request_name}.'\n",
+    "        assert nc4_matches_reference_hash_file(\n",
+    "            full_output_path,\n",
+    "            request_info['full_subset_reference_file'],\n",
+    "        ), f'{request_name}: Output and reference files do not match'\n",
     "\n",
-    "    compare_results_to_reference_file(output_filename)\n",
     "    print_success(request_name)\n",
     "else:\n",
     "    print(\n",
@@ -303,12 +325,16 @@
     "    )\n",
     "\n",
     "    request_name = 'SAMBAH variable request'\n",
-    "    output_filename = 'var_only.nc4'\n",
     "\n",
-    "    submit_and_download(harmony_client, var_only_request, output_filename)\n",
-    "    assert exists(output_filename), f'Unsuccessful {request_name}.'\n",
+    "    with TemporaryDirectory() as tmp_dir:\n",
+    "        var_output_path = tmp_dir / Path('var_only.nc4')\n",
+    "        submit_and_download(harmony_client, var_only_request, var_output_path)\n",
+    "        assert exists(var_output_path), f'Unsuccessful {request_name}.'\n",
+    "        assert nc4_matches_reference_hash_file(\n",
+    "            var_output_path,\n",
+    "            request_info['variable_subset_reference_file'],\n",
+    "        ), f'{request_name}: Output and reference files do not match'\n",
     "\n",
-    "    compare_results_to_reference_file(output_filename)\n",
     "    print_success(request_name)\n",
     "else:\n",
     "    print(\n",
@@ -345,12 +371,17 @@
     "    )\n",
     "\n",
     "    request_name = 'SAMBAH spatial request'\n",
-    "    output_filename = 'spatial_only.nc4'\n",
     "\n",
-    "    submit_and_download(harmony_client, spatial_only_request, output_filename)\n",
-    "    assert exists(output_filename), f'Unsuccessful {request_name}.'\n",
+    "    with TemporaryDirectory() as tmp_dir:\n",
+    "        spatial_output_path = tmp_dir / Path('spatial_only.nc4')\n",
     "\n",
-    "    compare_results_to_reference_file(output_filename)\n",
+    "        submit_and_download(harmony_client, spatial_only_request, spatial_output_path)\n",
+    "        assert exists(spatial_output_path), f'Unsuccessful {request_name}.'\n",
+    "        assert nc4_matches_reference_hash_file(\n",
+    "            spatial_output_path,\n",
+    "            request_info['spatial_subset_reference_file'],\n",
+    "        ), f'{request_name}: Output and reference files do not match'\n",
+    "\n",
     "    print_success(request_name)\n",
     "else:\n",
     "    print(\n",
@@ -386,35 +417,22 @@
     "    )\n",
     "\n",
     "    request_name = 'SAMBAH no subset single file request'\n",
-    "    output_filename = 'all_data.nc4'\n",
     "\n",
-    "    submit_and_download(harmony_client, all_data_request, output_filename)\n",
-    "    assert exists(output_filename), f'Unsuccessful {request_name}.'\n",
+    "    with TemporaryDirectory() as tmp_dir:\n",
+    "        all_data_output_path = tmp_dir / Path('all_data.nc4')\n",
     "\n",
-    "    compare_results_to_reference_file(output_filename)\n",
+    "        submit_and_download(harmony_client, all_data_request, all_data_output_path)\n",
+    "        assert exists(all_data_output_path), f'Unsuccessful {request_name}.'\n",
+    "        assert nc4_matches_reference_hash_file(\n",
+    "            all_data_output_path,\n",
+    "            request_info['no_subset_reference_file'],\n",
+    "        ), f'{request_name}: Output and reference files do not match'\n",
+    "\n",
     "    print_success(request_name)\n",
     "else:\n",
     "    print(\n",
     "        f'SAMBAH is not configured for environment: \"{harmony_environment}\" - skipping test.'\n",
     "    )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ca88eb71-2526-4b34-8ff7-441f869244e0",
-   "metadata": {},
-   "source": [
-    "# Clean up test outputs:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "73fdd147-74a0-48d3-957f-388e2abe356a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "remove_results_files()"
    ]
   }
  ],
@@ -435,7 +453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.11"
   },
   "name": "SDS_Regression.ipynb"
  },
