TRT-696: Consolidate to one JSON file per SAMBAH test.

--- a/test/sambah/SAMBAH_Regression.ipynb
+++ b/test/sambah/SAMBAH_Regression.ipynb
@@ -23,7 +23,11 @@
     "\n",
     "`conda env create -f ./environment.yaml && conda activate papermill-sambah`\n",
     "\n",
-    "A `.netrc` file must also be located in the `test` directory of this repository."
+    "A `.netrc` file must also be located in the `test` directory of this repository.\n",
+    "\n",
+    "### Test reference files:\n",
+    "\n",
+    "The reference files stored in the `harmony-regression-test` repository are JSON files containing hashed values derived from all groups and variables in each file. The raw netCDF4 files are hosted in the Harmony UAT AWS account in the harmony-uat-regression-tests S3 bucket in the `sambah` folder."
    ]
   },
   {
@@ -164,10 +168,6 @@
     "        'G1269044612-LARC_CLOUD',  # TEMPO_NO2_L2_V03_20240801T155308Z_S008G01.nc\n",
     "        'G1269044756-LARC_CLOUD',  # TEMPO_NO2_L2_V03_20240801T155948Z_S008G02.nc\n",
     "    ],\n",
-    "    'full_subset_reference_file': 'reference_files/temp_var_bbox_uat.json',\n",
-    "    'variable_subset_reference_file': 'reference_files/var_only_uat.json',\n",
-    "    'spatial_subset_reference_file': 'reference_files/spatial_only_uat.json',\n",
-    "    'no_subset_reference_file': 'reference_files/all_data_uat.json',\n",
     "}\n",
     "\n",
     "sambah_prod_information = {\n",
@@ -181,10 +181,6 @@
     "        'G3181345515-LARC_CLOUD',  # TEMPO_NO2_L2_V03_20240801T155308Z_S008G01.nc\n",
     "        'G3181345531-LARC_CLOUD',  # TEMPO_NO2_L2_V03_20240801T155948Z_S008G02.nc\n",
     "    ],\n",
-    "    'full_subset_reference_file': 'reference_files/temp_var_bbox_prod.json',\n",
-    "    'variable_subset_reference_file': 'reference_files/var_only_prod.json',\n",
-    "    'spatial_subset_reference_file': 'reference_files/spatial_only_prod.json',\n",
-    "    'no_subset_reference_file': 'reference_files/all_data_prod.json',\n",
     "}\n",
     "\n",
     "sambah_request_env = {\n",
@@ -238,7 +234,7 @@
     "* Download the output file within a temporary directory.\n",
     "* Ensure that the expected output file is downloaded (i.e. that the request was successful).\n",
     "* Convert the output to a JSON file that hashes the variables and groups in the output file.\n",
-    "* Compare that JSON file to a reference JSON file, that should be identical (except for the `history` and `history_json` attributes that contain timestamps)."
+    "* Compare that JSON file to a reference JSON file, that should be identical (except for the `history` and `history_json` attributes that contain timestamps, and `/subset_files`, which varies between UAT and production)."
    ]
   },
   {
@@ -286,7 +282,8 @@
     "        assert exists(full_output_path), f'Unsuccessful {request_name}.'\n",
     "        assert nc4_matches_reference_hash_file(\n",
     "            full_output_path,\n",
-    "            request_info['full_subset_reference_file'],\n",
+    "            'reference_files/temp_var_bbox.json',\n",
+    "            skipped_variables_or_groups='/subset_files',\n",
     "        ), f'{request_name}: Output and reference files do not match'\n",
     "\n",
     "    print_success(request_name)\n",
@@ -332,7 +329,8 @@
     "        assert exists(var_output_path), f'Unsuccessful {request_name}.'\n",
     "        assert nc4_matches_reference_hash_file(\n",
     "            var_output_path,\n",
-    "            request_info['variable_subset_reference_file'],\n",
+    "            'reference_files/var_only.json',\n",
+    "            skipped_variables_or_groups='/subset_files',\n",
     "        ), f'{request_name}: Output and reference files do not match'\n",
     "\n",
     "    print_success(request_name)\n",
@@ -379,7 +377,8 @@
     "        assert exists(spatial_output_path), f'Unsuccessful {request_name}.'\n",
     "        assert nc4_matches_reference_hash_file(\n",
     "            spatial_output_path,\n",
-    "            request_info['spatial_subset_reference_file'],\n",
+    "            'reference_files/spatial_only.json',\n",
+    "            skipped_variables_or_groups='/subset_files',\n",
     "        ), f'{request_name}: Output and reference files do not match'\n",
     "\n",
     "    print_success(request_name)\n",
@@ -425,7 +424,8 @@
     "        assert exists(all_data_output_path), f'Unsuccessful {request_name}.'\n",
     "        assert nc4_matches_reference_hash_file(\n",
     "            all_data_output_path,\n",
-    "            request_info['no_subset_reference_file'],\n",
+    "            'reference_files/all_data.json',\n",
+    "            skipped_variables_or_groups='/subset_files',\n",
     "        ), f'{request_name}: Output and reference files do not match'\n",
     "\n",
     "    print_success(request_name)\n",
