use more informative variable names for env-specific test data

--- a/test/sambah/SAMBAH_Regression.ipynb
+++ b/test/sambah/SAMBAH_Regression.ipynb
@@ -146,18 +146,12 @@
    ]
   },
   {
+   "metadata": {},
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4420bb6e",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-13T19:17:08.213477Z",
-     "start_time": "2024-11-13T19:17:05.311566Z"
-    }
-   },
    "outputs": [],
+   "execution_count": null,
    "source": [
-    "sambah_non_prod_information = {\n",
+    "tempo_no2_test_data_uat = {\n",
     "    # TEMPO NO2 tropospheric, stratospheric, and total columns V03\n",
     "    # https://cmr.uat.earthdata.nasa.gov/search/concepts/C1262899916-LARC_CLOUD.html\n",
     "    'collection': Collection(id='C1262899916-LARC_CLOUD'),\n",
@@ -170,7 +164,7 @@
     "    ],\n",
     "}\n",
     "\n",
-    "sambah_prod_information = {\n",
+    "tempo_no2_test_data_prod = {\n",
     "    # TEMPO NO2 tropospheric and stratospheric columns V03 (BETA)\n",
     "    # https://cmr.earthdata.nasa.gov/search/concepts/C2930725014-LARC_CLOUD.html\n",
     "    'collection': Collection(id='C2930725014-LARC_CLOUD'),\n",
@@ -183,28 +177,28 @@
     "    ],\n",
     "}\n",
     "\n",
-    "sambah_request_env = {\n",
-    "    Environment.LOCAL: sambah_non_prod_information,\n",
-    "    Environment.SIT: sambah_non_prod_information,\n",
-    "    Environment.UAT: sambah_non_prod_information,\n",
-    "    Environment.PROD: sambah_prod_information,\n",
+    "sambah_test_data_by_environment = {\n",
+    "    Environment.LOCAL: tempo_no2_test_data_uat,\n",
+    "    Environment.SIT: tempo_no2_test_data_uat,\n",
+    "    Environment.UAT: tempo_no2_test_data_uat,\n",
+    "    Environment.PROD: tempo_no2_test_data_prod,\n",
     "}\n",
     "\n",
-    "if harmony_environment in sambah_request_env:\n",
-    "    sambah_info = sambah_request_env[harmony_environment]\n",
+    "if harmony_environment in sambah_test_data_by_environment:\n",
+    "    sambah_test_data = sambah_test_data_by_environment[harmony_environment]\n",
     "else:\n",
-    "    sambah_info = None"
-   ]
+    "    sambah_test_data = None"
+   ],
+   "id": "648c47b58224d160"
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0d7e83fa-20f1-4382-b07f-9f59ca1acb11",
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "request_info = {\n",
-    "    **sambah_info,\n",
+    "    **sambah_test_data,\n",
     "    'temporal': {\n",
     "        'start': datetime(2024, 8, 1, 15, 34, 0),\n",
     "        'stop': datetime(2024, 8, 1, 16, 0, 0),\n",
@@ -218,7 +212,8 @@
     "        'support_data/scattering_weights',\n",
     "    ],\n",
     "}"
-   ]
+   ],
+   "id": "91a13dd5465b85fb"
   },
   {
    "cell_type": "markdown",
