Added test strategy summary information and updated headers

--- a/test/sambah/SAMBAH_Regression.ipynb
+++ b/test/sambah/SAMBAH_Regression.ipynb
@@ -31,25 +31,22 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "009f1df8",
    "metadata": {},
-   "source": [
-    "# Import required packages:"
-   ]
+   "cell_type": "markdown",
+   "source": "# Setup",
+   "id": "11c99946a6c20848"
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Import required packages:",
+   "id": "99073a78dabf5dbc"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7ce7f640",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-13T19:16:56.881691Z",
-     "start_time": "2024-11-13T19:16:55.207082Z"
-    },
-    "tags": []
-   },
    "outputs": [],
+   "execution_count": null,
    "source": [
     "from datetime import datetime\n",
     "from os.path import exists\n",
@@ -58,28 +55,27 @@
     "\n",
     "from earthdata_hashdiff import nc4_matches_reference_hash_file\n",
     "from harmony import BBox, Client, Collection, Environment, Request"
-   ]
+   ],
+   "id": "7e30a672c28056a6"
   },
   {
+   "metadata": {},
    "cell_type": "markdown",
-   "id": "ca4b9bb8-227c-4370-96a1-d87e16d3668b",
-   "metadata": {},
-   "source": [
-    "## Import shared utility functions:"
-   ]
+   "source": "### Import shared utility functions:",
+   "id": "66212342a30e0af1"
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "25f05477-a082-4104-9b6a-1b3678b36005",
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "import sys\n",
     "\n",
     "sys.path.append('../shared_utils')\n",
     "from utilities import print_success, submit_and_download"
-   ]
+   ],
+   "id": "b48cdb47d243c22a"
   },
   {
    "cell_type": "markdown",
@@ -216,47 +212,65 @@
    "id": "91a13dd5465b85fb"
   },
   {
-   "cell_type": "markdown",
-   "id": "fc7aef85",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    "# Begin regression tests:\n",
+    "# Begin regression tests\n",
     "\n",
-    "SAMBAH is currently deployed to Sandbox, SIT, UAT and production. Requests will be made against the TEMPO NO2 L2 V03 collection. Each request will:\n",
+    "SAMBAH is currently deployed to Sandbox, SIT, UAT and production.\n",
     "\n",
-    "* Define a request to Harmony using  `harmony-py`.\n",
-    "* Execute that request.\n",
-    "* Download the output file within a temporary directory.\n",
-    "* Ensure that the expected output file is downloaded (i.e. that the request was successful).\n",
-    "* Convert the output to a JSON file that hashes the variables and groups in the output file.\n",
-    "* Compare that JSON file to a reference JSON file, that should be identical (except for the `history` and `history_json` attributes that contain timestamps, and `/subset_files`, which varies between UAT and production)."
-   ]
+    "## Test Strategy Overview\n",
+    "\n",
+    "### Test Execution Process\n",
+    "\n",
+    "Each test follows this standardized process:\n",
+    "\n",
+    "1. Define a request to Harmony using `harmony-py`\n",
+    "2. Execute that request\n",
+    "3. Download the output file within a temporary directory\n",
+    "4. Ensure that the expected output file is downloaded (i.e., that the request was successful)\n",
+    "5. Convert the output to a JSON file that hashes the variables and groups in the output file\n",
+    "6. Compare that JSON file to a reference JSON file, which should be identical (except for the `history` and `history_json` attributes that contain timestamps, and `/subset_files`, which varies between UAT and production)\n",
+    "\n",
+    "### Capabilities Tested\n",
+    "\n",
+    "These 4 tests are designed to validate different aspects of SAMBAH functionality:\n",
+    "\n",
+    "| Test                       | Purpose                             | Key Features Tested                                                 |\n",
+    "|:---------------------------|:------------------------------------|:--------------------------------------------------------------------|\n",
+    "| **1. Full Capabilities**   | Integration test with all features  | Temporal + Spatial + Variable subsetting + Multi-scan concatenation |\n",
+    "| **2. Variable Subsetting** | Isolated variable filtering         | Variable selection + Intra-scan concatenation only                  |\n",
+    "| **3. Spatial Subsetting**  | Isolated spatial filtering          | Bounding box filtering + Intra- & Inter-scan concatenation          |\n",
+    "| **4. Minimal Processing**  | Edge case validation                | Single granule passthrough with no subsetting                       |\n",
+    "\n",
+    "### Test Data\n",
+    "\n",
+    "All tests use the same **TEMPO NO2 L2 V03** dataset from **2024-08-01**, and optionally specify:\n",
+    "- **5 granules** spanning **2 scans** (S007G07-G09, S008G01-G02)\n",
+    "- **Time range:** 15:34–16:00 UTC (26 minutes)\n",
+    "- **Geographic coverage:** North America and Pacific regions\n"
+   ],
+   "id": "2b7fcaa7e70edd31"
   },
   {
-   "cell_type": "markdown",
-   "id": "ef9ec4d2-2228-47d0-a990-d5a4d77b7bc7",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    "### SAMBAH: temporal, variable and bounding box subset request\n",
+    "## SAMBAH: temporal, variable and bounding box subset request\n",
     "\n",
     "This is a request that exercises the full range of SAMBAH options: \n",
     "- time range\n",
     "- spatial bounding box\n",
     "- variable subsetting\n",
     "- concatenating within (i.e., `extend`) and across scans"
-   ]
+   ],
+   "id": "7ef0a9bd5a5bd871"
   },
   {
+   "metadata": {},
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d6aaf063-1f3c-4d84-b414-ca80e65ef78b",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-13T19:18:18.977791Z",
-     "start_time": "2024-11-13T19:17:24.118362Z"
-    }
-   },
    "outputs": [],
+   "execution_count": null,
    "source": [
     "if request_info is not None:\n",
     "    temp_var_bbox_request = Request(\n",
@@ -286,7 +300,8 @@
     "    print(\n",
     "        f'SAMBAH is not configured for environment: \"{harmony_environment}\" - skipping test.'\n",
     "    )"
-   ]
+   ],
+   "id": "5b71262fa08f5bae"
   },
   {
    "cell_type": "markdown",
