update test headers and descriptions

--- a/test/sambah/SAMBAH_Regression.ipynb
+++ b/test/sambah/SAMBAH_Regression.ipynb
@@ -256,13 +256,11 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## SAMBAH: temporal, variable and bounding box subset request\n",
+    "## SAMBAH Test 1: Full Capabilities\n",
     "\n",
-    "This is a request that exercises the full range of SAMBAH options: \n",
-    "- time range\n",
-    "- spatial bounding box\n",
-    "- variable subsetting\n",
-    "- concatenating within (i.e., `extend`) and across scans"
+    "**Parameters:** 5 granules, time window, large bbox, 3 variables from different groups\n",
+    "\n",
+    "**Tests:** Temporal + Spatial + Variable subsetting + Multi-scan (i.e., `extend` & `concatenate`) concatenation"
    ],
    "id": "7ef0a9bd5a5bd871"
   },
@@ -304,23 +302,22 @@
    "id": "5b71262fa08f5bae"
   },
   {
-   "cell_type": "markdown",
-   "id": "55aca1b5-0dec-4866-952d-b7c016bcf86e",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    "### SAMBAH: variable subset request, two files\n",
+    "## SAMBAH Test 2: Variable subsetting\n",
     "\n",
-    "This is a request that includes:\n",
-    "- variable subsetting\n",
-    "- concatenating two granules within (i.e., `extend`) a scan"
-   ]
+    "**Parameters:** 2 adjacent granules (same scan), 3 variables including one 3D variable\n",
+    "\n",
+    "**Tests:** Variable selection + Intra-scan (i.e., `extend`) concatenation only"
+   ],
+   "id": "a46f47978d8afe9b"
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "90bb3455-f82c-4cd8-93f2-feba79fbed7b",
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "if request_info is not None:\n",
     "    var_only_request = Request(\n",
@@ -348,26 +345,26 @@
     "    print(\n",
     "        f'SAMBAH is not configured for environment: \"{harmony_environment}\" - skipping test.'\n",
     "    )"
-   ]
+   ],
+   "id": "20e7b3ad0629ace1"
   },
   {
+   "metadata": {},
    "cell_type": "markdown",
-   "id": "c8322c1b-7fad-4b87-a46d-abf5f0ee56df",
-   "metadata": {},
    "source": [
-    "### SAMBAH: spatial request\n",
+    "## SAMBAH Test 3: Spatial Subsetting\n",
     "\n",
-    "This is a request that includes:\n",
-    "- spatial bounding box subsetting\n",
-    "- concatenating granules within (i.e., `extend`) and across scans"
-   ]
+    "**Parameters:** 5 granules, large bbox, all variables\n",
+    "\n",
+    "**Tests:** Bounding box filtering + Multi-scan (i.e., `extend` & `concatenate`) concatenation"
+   ],
+   "id": "6eaae390bfecdd3e"
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4330105a-f9f0-429e-9762-3049f408d635",
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "if request_info is not None:\n",
     "    spatial_only_request = Request(\n",
@@ -396,26 +393,26 @@
     "    print(\n",
     "        f'SAMBAH is not configured for environment: \"{harmony_environment}\" - skipping test.'\n",
     "    )"
-   ]
+   ],
+   "id": "fe565077a3adb454"
   },
   {
+   "metadata": {},
    "cell_type": "markdown",
-   "id": "d0629b4f-1990-42f7-b19d-025e46a96629",
-   "metadata": {},
    "source": [
-    "### SAMBAH: no subsetting required, single file\n",
+    "## SAMBAH Test 4: Minimal Processing\n",
     "\n",
-    "This is a request that includes:\n",
-    "- a single granule\n",
-    "- no subsetting"
-   ]
+    "**Parameters:** 1 granule, no subsetting operations\n",
+    "\n",
+    "**Tests:** Single granule passthrough with no subsetting"
+   ],
+   "id": "eece3f02865271a9"
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c747cfcc-e63a-4858-b406-a4ec87b6acb5",
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "if request_info is not None:\n",
     "    all_data_request = Request(\n",
@@ -443,7 +440,8 @@
     "    print(\n",
     "        f'SAMBAH is not configured for environment: \"{harmony_environment}\" - skipping test.'\n",
     "    )"
-   ]
+   ],
+   "id": "b936c00235e21246"
   }
  ],
  "metadata": {
