--- a/test/sambah/SAMBAH_Regression.ipynb
+++ b/test/sambah/SAMBAH_Regression.ipynb
@@ -217,8 +217,14 @@
    "source": [
     "# Begin regression tests\n",
     "\n",
-    "SAMBAH is currently deployed to Sandbox, SIT, UAT and production.\n",
-    "\n",
+    "SAMBAH is currently deployed to Sandbox, SIT, UAT and production."
+   ],
+   "id": "d219f1264cea3dfa"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
     "## Test Strategy Overview\n",
     "\n",
     "### Test Execution Process\n",
@@ -255,6 +261,34 @@
   {
    "metadata": {},
    "cell_type": "markdown",
+   "source": "## Test Execution Helper function",
+   "id": "cc76ea38b0f7cb14"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "def execute_sambah_test(harmony_client_object, harmony_request, request_name, output_filename, reference_filepath):\n",
+    "    \"\"\"Execute a SAMBAH test with temporary directory handling and validation.\"\"\"\n",
+    "    with TemporaryDirectory() as tmp_dir:\n",
+    "        output_path = tmp_dir / Path(output_filename)\n",
+    "        submit_and_download(harmony_client_object, harmony_request, output_path)\n",
+    "        assert exists(output_path), f'Unsuccessful {request_name}.'\n",
+    "        assert nc4_matches_reference_hash_file(\n",
+    "            output_path,\n",
+    "            reference_filepath,\n",
+    "            skipped_variables_or_groups='/subset_files',\n",
+    "        ), f'{request_name}: Output and reference files do not match'\n",
+    "\n",
+    "    print_success(request_name)"
+   ],
+   "id": "1eda7b2969f6384f"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "## SAMBAH Test 1: Full Capabilities\n",
     "\n",
@@ -271,33 +305,25 @@
    "execution_count": null,
    "source": [
     "if request_info is not None:\n",
+    "    request_name = 'SAMBAH temporal + variable + bounding box request'\n",
     "    temp_var_bbox_request = Request(\n",
     "        collection=request_info['collection'],\n",
-    "        extend=['mirror_step'],\n",
-    "        concatenate=True,\n",
-    "        granule_id=request_info['granule_id'],\n",
-    "        temporal=request_info['temporal'],\n",
-    "        variables=request_info['variables'],\n",
-    "        spatial=request_info['spatial'],\n",
+    "        extend=['mirror_step'],                  # Intra-scan concatenation\n",
+    "        concatenate=True,                        # Inter-scan concatenation\n",
+    "        granule_id=request_info['granule_id'],   # All 5 granules\n",
+    "        temporal=request_info['temporal'],       # 26-min window\n",
+    "        variables=request_info['variables'],     # 3 selected variables\n",
+    "        spatial=request_info['spatial'],         # Bounding box\n",
     "    )\n",
     "\n",
-    "    request_name = 'SAMBAH temporal, variable, bounding box request'\n",
-    "\n",
-    "    with TemporaryDirectory() as tmp_dir:\n",
-    "        full_output_path = tmp_dir / Path('temp_var_bbox.nc4')\n",
-    "        submit_and_download(harmony_client, temp_var_bbox_request, full_output_path)\n",
-    "        assert exists(full_output_path), f'Unsuccessful {request_name}.'\n",
-    "        assert nc4_matches_reference_hash_file(\n",
-    "            full_output_path,\n",
-    "            'reference_files/temp_var_bbox.json',\n",
-    "            skipped_variables_or_groups='/subset_files',\n",
-    "        ), f'{request_name}: Output and reference files do not match'\n",
-    "\n",
-    "    print_success(request_name)\n",
+    "    execute_sambah_test(\n",
+    "        harmony_client, temp_var_bbox_request,\n",
+    "        request_name=request_name,\n",
+    "        output_filename='temp_var_bbox.nc4',\n",
+    "        reference_filepath='reference_files/temp_var_bbox.json'\n",
+    "    )\n",
     "else:\n",
-    "    print(\n",
-    "        f'SAMBAH is not configured for environment: \"{harmony_environment}\" - skipping test.'\n",
-    "    )"
+    "    print(f'SAMBAH is not configured for environment: \"{harmony_environment}\" - skipping test.')"
    ],
    "id": "5b71262fa08f5bae"
   },
@@ -320,31 +346,23 @@
    "execution_count": null,
    "source": [
     "if request_info is not None:\n",
+    "    request_name = 'SAMBAH variable request'\n",
     "    var_only_request = Request(\n",
     "        collection=request_info['collection'],\n",
-    "        extend=['mirror_step'],\n",
-    "        concatenate=True,\n",
-    "        granule_id=request_info['granule_id'][:2],\n",
-    "        variables=request_info['variables'],\n",
+    "        extend=['mirror_step'],                    # Intra-scan concatenation\n",
+    "        concatenate=True,                          # Inter-scan concatenation\n",
+    "        granule_id=request_info['granule_id'][:2], # First 2 granules only\n",
+    "        variables=request_info['variables'],       # 3 selected variables\n",
     "    )\n",
     "\n",
-    "    request_name = 'SAMBAH variable request'\n",
-    "\n",
-    "    with TemporaryDirectory() as tmp_dir:\n",
-    "        var_output_path = tmp_dir / Path('var_only.nc4')\n",
-    "        submit_and_download(harmony_client, var_only_request, var_output_path)\n",
-    "        assert exists(var_output_path), f'Unsuccessful {request_name}.'\n",
-    "        assert nc4_matches_reference_hash_file(\n",
-    "            var_output_path,\n",
-    "            'reference_files/var_only.json',\n",
-    "            skipped_variables_or_groups='/subset_files',\n",
-    "        ), f'{request_name}: Output and reference files do not match'\n",
-    "\n",
-    "    print_success(request_name)\n",
+    "    execute_sambah_test(\n",
+    "        harmony_client, var_only_request,\n",
+    "        request_name=request_name,\n",
+    "        output_filename='var_only.nc4',\n",
+    "        reference_filepath='reference_files/var_only.json'\n",
+    "    )\n",
     "else:\n",
-    "    print(\n",
-    "        f'SAMBAH is not configured for environment: \"{harmony_environment}\" - skipping test.'\n",
-    "    )"
+    "    print(f'SAMBAH is not configured for environment: \"{harmony_environment}\" - skipping test.')"
    ],
    "id": "20e7b3ad0629ace1"
   },
@@ -367,32 +385,23 @@
    "execution_count": null,
    "source": [
     "if request_info is not None:\n",
+    "    request_name = 'SAMBAH spatial request'\n",
     "    spatial_only_request = Request(\n",
     "        collection=request_info['collection'],\n",
-    "        extend=['mirror_step'],\n",
-    "        concatenate=True,\n",
-    "        granule_id=request_info['granule_id'],\n",
-    "        spatial=request_info['spatial'],\n",
+    "        extend=['mirror_step'],                  # Intra-scan concatenation\n",
+    "        concatenate=True,                        # Inter-scan concatenation\n",
+    "        granule_id=request_info['granule_id'],   # All 5 granules\n",
+    "        spatial=request_info['spatial'],         # Bounding box\n",
     "    )\n",
     "\n",
-    "    request_name = 'SAMBAH spatial request'\n",
-    "\n",
-    "    with TemporaryDirectory() as tmp_dir:\n",
-    "        spatial_output_path = tmp_dir / Path('spatial_only.nc4')\n",
-    "\n",
-    "        submit_and_download(harmony_client, spatial_only_request, spatial_output_path)\n",
-    "        assert exists(spatial_output_path), f'Unsuccessful {request_name}.'\n",
-    "        assert nc4_matches_reference_hash_file(\n",
-    "            spatial_output_path,\n",
-    "            'reference_files/spatial_only.json',\n",
-    "            skipped_variables_or_groups='/subset_files',\n",
-    "        ), f'{request_name}: Output and reference files do not match'\n",
-    "\n",
-    "    print_success(request_name)\n",
+    "    execute_sambah_test(\n",
+    "        harmony_client, spatial_only_request,\n",
+    "        request_name=request_name,\n",
+    "        output_filename='spatial_only.nc4',\n",
+    "        reference_filepath='reference_files/spatial_only.json'\n",
+    "    )\n",
     "else:\n",
-    "    print(\n",
-    "        f'SAMBAH is not configured for environment: \"{harmony_environment}\" - skipping test.'\n",
-    "    )"
+    "    print(f'SAMBAH is not configured for environment: \"{harmony_environment}\" - skipping test.')"
    ],
    "id": "fe565077a3adb454"
   },
@@ -415,31 +424,22 @@
    "execution_count": null,
    "source": [
     "if request_info is not None:\n",
+    "    request_name = 'SAMBAH no subset single file request'\n",
     "    all_data_request = Request(\n",
     "        collection=request_info['collection'],\n",
-    "        extend='mirror_step',\n",
-    "        concatenate=True,\n",
-    "        granule_id=request_info['granule_id'][0],\n",
+    "        extend='mirror_step',                     # Intra-scan concatenation\n",
+    "        concatenate=True,                         # Inter-scan concatenation\n",
+    "        granule_id=request_info['granule_id'][0], # Single granule only\n",
     "    )\n",
     "\n",
-    "    request_name = 'SAMBAH no subset single file request'\n",
-    "\n",
-    "    with TemporaryDirectory() as tmp_dir:\n",
-    "        all_data_output_path = tmp_dir / Path('all_data.nc4')\n",
-    "\n",
-    "        submit_and_download(harmony_client, all_data_request, all_data_output_path)\n",
-    "        assert exists(all_data_output_path), f'Unsuccessful {request_name}.'\n",
-    "        assert nc4_matches_reference_hash_file(\n",
-    "            all_data_output_path,\n",
-    "            'reference_files/all_data.json',\n",
-    "            skipped_variables_or_groups='/subset_files',\n",
-    "        ), f'{request_name}: Output and reference files do not match'\n",
-    "\n",
-    "    print_success(request_name)\n",
+    "    execute_sambah_test(\n",
+    "        harmony_client, all_data_request,\n",
+    "        request_name=request_name,\n",
+    "        output_filename='all_data.nc4',\n",
+    "        reference_filepath='reference_files/all_data.json'\n",
+    "    )\n",
     "else:\n",
-    "    print(\n",
-    "        f'SAMBAH is not configured for environment: \"{harmony_environment}\" - skipping test.'\n",
-    "    )"
+    "    print(f'SAMBAH is not configured for environment: \"{harmony_environment}\" - skipping test.')"
    ],
    "id": "b936c00235e21246"
   }
