--- a/test/sambah/SAMBAH_Regression.ipynb
+++ b/test/sambah/SAMBAH_Regression.ipynb
@@ -311,11 +311,11 @@
    "execution_count": null,
    "source": [
     "if request_info is not None:\n",
-    "    request_name = 'SAMBAH temporal + variable + bounding box request'\n",
+    "    # All 5 granules + temporal + variable + spatial subsetting\n",
     "    temp_var_bbox_request = Request(\n",
     "        collection=request_info['collection'],\n",
-    "        extend=['mirror_step'],  # Intra-scan concatenation\n",
-    "        concatenate=True,  # Inter-scan concatenation\n",
+    "        extend=['mirror_step'],\n",
+    "        concatenate=True,\n",
     "        granule_id=request_info['granule_id'],  # All 5 granules\n",
     "        temporal=request_info['temporal'],  # 26-min window\n",
     "        variables=request_info['variables'],  # 3 selected variables\n",
@@ -325,7 +325,7 @@
     "    execute_sambah_test(\n",
     "        harmony_client,\n",
     "        temp_var_bbox_request,\n",
-    "        request_name=request_name,\n",
+    "        request_name='SAMBAH temporal + variable + bounding box request',\n",
     "        output_filename='temp_var_bbox.nc4',\n",
     "        reference_filepath='reference_files/temp_var_bbox.json',\n",
     "    )\n",
@@ -355,11 +355,11 @@
    "execution_count": null,
    "source": [
     "if request_info is not None:\n",
-    "    request_name = 'SAMBAH variable request'\n",
+    "    # First 2 granules + variable subsetting only\n",
     "    var_only_request = Request(\n",
     "        collection=request_info['collection'],\n",
-    "        extend=['mirror_step'],  # Intra-scan concatenation\n",
-    "        concatenate=True,  # Inter-scan concatenation\n",
+    "        extend=['mirror_step'],\n",
+    "        concatenate=True,\n",
     "        granule_id=request_info['granule_id'][:2],  # First 2 granules only\n",
     "        variables=request_info['variables'],  # 3 selected variables\n",
     "    )\n",
@@ -367,7 +367,7 @@
     "    execute_sambah_test(\n",
     "        harmony_client,\n",
     "        var_only_request,\n",
-    "        request_name=request_name,\n",
+    "        request_name='SAMBAH variable request',\n",
     "        output_filename='var_only.nc4',\n",
     "        reference_filepath='reference_files/var_only.json',\n",
     "    )\n",
@@ -397,11 +397,11 @@
    "execution_count": null,
    "source": [
     "if request_info is not None:\n",
-    "    request_name = 'SAMBAH spatial request'\n",
+    "    # All 5 granules + spatial subsetting only\n",
     "    spatial_only_request = Request(\n",
     "        collection=request_info['collection'],\n",
-    "        extend=['mirror_step'],  # Intra-scan concatenation\n",
-    "        concatenate=True,  # Inter-scan concatenation\n",
+    "        extend=['mirror_step'],\n",
+    "        concatenate=True,\n",
     "        granule_id=request_info['granule_id'],  # All 5 granules\n",
     "        spatial=request_info['spatial'],  # Bounding box\n",
     "    )\n",
@@ -409,7 +409,7 @@
     "    execute_sambah_test(\n",
     "        harmony_client,\n",
     "        spatial_only_request,\n",
-    "        request_name=request_name,\n",
+    "        request_name='SAMBAH spatial request',\n",
     "        output_filename='spatial_only.nc4',\n",
     "        reference_filepath='reference_files/spatial_only.json',\n",
     "    )\n",
@@ -439,18 +439,18 @@
    "execution_count": null,
    "source": [
     "if request_info is not None:\n",
-    "    request_name = 'SAMBAH no subset single file request'\n",
+    "    # Single granule + no subsetting\n",
     "    all_data_request = Request(\n",
     "        collection=request_info['collection'],\n",
-    "        extend='mirror_step',  # Intra-scan concatenation\n",
-    "        concatenate=True,  # Inter-scan concatenation\n",
+    "        extend='mirror_step',\n",
+    "        concatenate=True,\n",
     "        granule_id=request_info['granule_id'][0],  # Single granule only\n",
     "    )\n",
     "\n",
     "    execute_sambah_test(\n",
     "        harmony_client,\n",
     "        all_data_request,\n",
-    "        request_name=request_name,\n",
+    "        request_name='SAMBAH no subset single file request',\n",
     "        output_filename='all_data.nc4',\n",
     "        reference_filepath='reference_files/all_data.json',\n",
     "    )\n",
